OpenAPI Docs - part final
